--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,11 +1,7 @@
-@primary-color: 'red';
+@import '~antd/lib/style/themes/default.less'; //引入antd的变量文件，实现变量的覆盖
+@primary-color: #800080;
 @layout-header-padding: '0px';
 
-.app {
-    //background-color: @primary-color;
-    height: 100vh;
-}
-
-.field{
-    color: @primary-color; //初次为什么不生效，在自定义组件和antd组件中
+:root {
+    --PC: @primary-color;
 }
