--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -2,6 +2,7 @@
 @primary-color: #800080;
 @layout-header-padding: '0px';
 
-:root {
+// c3 与less结合，对自定义组建和antd组件换肤
+body {
     --PC: @primary-color;
 }
