--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,11 +1,14 @@
 @import './variables.less'; 
-.height {
-    height: 100vh;
-}
-.colorAndFont{
-    color: var(--PC); 
-    font-size: 30px;
-}
-.selfDefineCom{
-    color:@primary-color
-}
+//这个文件基本无用
+// .height {
+//     height: 100vh;
+// }
+// .font{
+//     font-size: 30px;
+// }
+//.selfDefineCom{
+    //color:@primary-color
+//}
+// .color{
+//     color:@primary-color
+// }
